fixes center align issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -801,8 +801,8 @@ label {
   margin-top: 20%;
 }
 .one-door:nth-child(1) {
-  margin-top: 15%;
-  margin-left: 40%;
+  margin-top: 13%;
+  margin-left: 43%;
   position: absolute;
 }
 
